# swarm-mcp

./: .gitignore  .gitmodules  AGENTS.md  Agents.md  Cargo.toml  DEVNOTES.md  LICENSE  README.md  package.json  tsconfig.json
.agents/plugins/: marketplace.json
.agents/skills/: README.md
.claude-plugin/: marketplace.json
apps/swarm-server/: Cargo.toml
apps/swarm-server/install/: dev.swarm.server.plist
apps/swarm-server/migrations/: 0001_initial.sql
apps/swarm-server/src/: error.rs  lib.rs  main.rs
apps/swarm-server/src/launch/: mod.rs
apps/swarm-server/src/pty/: buffer.rs  lease.rs  mod.rs
apps/swarm-ui/: package.json  tsconfig.json
apps/swarm-ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/swarm-ui/src-tauri/capabilities/: default.json
apps/swarm-ui/src-tauri/icons/: icon.icns
apps/swarm-ui/src-tauri/src/: bind.rs  daemon.rs  events.rs  launch.rs  lib.rs  main.rs  model.rs  price_catalog.json  provenance.rs  pty.rs  swarm.rs  system_load.rs  ui_appearance.rs  ui_commands.rs  ui_control.rs  writes.rs
commands/: swarm-implementer.md  swarm-planner.md
crates/swarm-protocol/: Cargo.toml
crates/swarm-protocol/fixtures/: annotation.json  annotation.msgpack  error_auth.json  error_auth.msgpack  error_lease_conflict.json  error_lease_conflict.msgpack  error_rate_limited.json  error_rate_limited.msgpack  event.json  event.msgpack  frame_delta_kv.json  frame_delta_kv.msgpack  frame_delta_locks.json  frame_delta_locks.msgpack  frame_delta_messages.json  frame_delta_messages.msgpack  frame_delta_ptys.json  frame_delta_ptys.msgpack  frame_delta_tasks.json  frame_delta_tasks.msgpack  frame_error.json  frame_error.msgpack  frame_event_appended.json  frame_event_appended.msgpack  frame_lease_changed.json  frame_lease_changed.msgpack  frame_ping.json  frame_ping.msgpack  frame_pong.json  frame_pong.msgpack  frame_pty_attach.json  frame_pty_attach.msgpack  frame_pty_attach_rejected.json  frame_pty_attach_rejected.msgpack  frame_pty_data.json  frame_pty_data.msgpack  frame_pty_detach.json  frame_pty_detach.msgpack  frame_pty_exit.json  frame_pty_exit.msgpack  (+51 more)
crates/swarm-protocol/src/: cursors.rs  errors.rs  frames.rs  lib.rs  rpc.rs  state.rs  version.rs
crates/swarm-protocol/tests/: fixtures.rs
crates/swarm-schema/: Cargo.toml
crates/swarm-schema/src/: lib.rs
crates/swarm-state/: Cargo.toml
crates/swarm-state/src/: lib.rs
docs/: CURRENT_APP_FEATURES.md  MAY_1ST_EXECUTION_BOOTSTRAP.md  MAY_1ST_OVERHAUL_PLAN.md  MAY_1ST_PLAN_ARCHIVE.md  OVERHAUL_AGENT_ASSIGNMENTS.md  OVERHAUL_EXECUTION_STATUS.md  OVERHAUL_HANDOFF_PROMPT.md  OVERHAUL_ORCHESTRATOR_PROMPT.md  VISUAL_TESTABILITY_AND_MAJORDOMO_PLAN.md  agent-routing.md  agents-implementer.md  agents-planner.md  backend-configuration.md  codex.toml  control-plane.md  database-contracts.md  design-batch-creation.md  design-routine-dispatch.md  encom-overhaul-plan.md  generic-AGENTS.md  getting-started.md  identity-boundaries.md  identity-boundary-audit.md  identity-defense-in-depth.md  install-skill.md  linear-promotion-policy.md  opencode-AGENTS.md  opencode.jsonc  quickstart.md  roles-and-teams.md  swarm-server.md  system-load-analyzer-v2-plan.md  system-load-analyzer.md
docs/diagrams/: README.md  backend-configuration.mmd
docs/manual-qa/: listener-health-reliability-sync.md  may-1st-slice-5-proof-pack.md  may-1st-slice-6-review-ship.md  may-1st-slice-7a-stale-reconciliation.md  may-1st-slice-7b-7c-launch-preflight.md  may-1st-slice-7d-app-restart-survivor.md  may-1st-slice-8a-8c-post-session-background.md  may-1st-slice-8d-background-acceptance.md  phase-1-launch-productization.md  phase-2-acceleration-tooling.md  phase-3-agent-identity-overhaul.md  phase-4-project-spaces.md  phase-5-assets-and-multimodal-context.md  phase-6-startup-branding-and-credit.md  phase-7-themes-and-protocol-views.md
docs/swarm-rounds/: 2026-05-13-swarm-ios-r1.md
env/: README.md  default.env.example  launchers.zsh.example  personal.env.example  profile.env.example  work.env.example
integrations/_shared/: herdr_agent_report.py  (+4 more)
scripts/: generate-protocol-types.mjs  generate-ui-protocol-types.mjs  install-swarm-ui-latest-app.sh  open-latest-swarm-ui.sh  render-mermaid.mjs
skills/: README.md  tauri
sql/: swarm_db_bootstrap.sql  swarm_db_finalize.sql
src/: browser.ts  browserStore.ts  cleanup.ts  cli.ts  cmd.ts  context.ts  db.ts  dispatch.ts  events.ts  herdr_socket.ts  identity.ts  index.ts  init.ts  install.ts  kv.ts  launcher_identity.ts  messages.ts  operatorVerifyCli.ts  paths.test.ts  paths.ts  planner.ts  profile_env.ts  prompts.ts  registerPrompts.ts  registry.ts  spawner_backend.ts  spawner_defaults.ts  status.ts  subcommands.ts  tasks.ts  time.ts  ui.ts  visualAtlasCli.ts  work_tracker.ts  workspace_backend.ts  workspace_identity.ts
test/: browser.test.ts  browserStore.test.ts  cmd.test.ts  dispatch-s7-no-double-spawn.test.ts  dispatch-visibility.test.ts  events.test.ts  herdr_socket.test.ts  identity.test.ts  launcher_identity.test.ts  operator-verify-cli.test.ts  prompts.test.ts  swarm.test.ts  visual-atlas-cli.test.ts  workspace_identity.test.ts
(+220 files in other folders)
