[package]
name = "swarm-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
axum = { version = "0.7", features = ["json", "ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
dirs = "6"
hex = "0.4"
hostname = "0.4"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["service", "tokio"] }
portable-pty = "0.8"
rand = "0.8"
rcgen = "0.13"
rmp-serde = "1"
rustls-pemfile = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
swarm-protocol = { path = "../../crates/swarm-protocol" }
swarm-state = { path = "../../crates/swarm-state" }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
zeroconf = "0.18"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
