[package]
name = "swarm-protocol"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Wire protocol types for swarm-server ↔ swarm-ui ↔ iOS companion"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
rmp-serde = "1"

[dev-dependencies]
serde_json = "1"
rmp-serde = "1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"

[[bin]]
name = "generate-fixtures"
path = "src/bin/generate_fixtures.rs"
