[package]
name = "swarm-schema"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Shared swarm.db schema bootstrap and compatibility checks"
license = "MIT"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
