[package]
name = "swarm-state"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Shared swarm.db snapshot and delta loader for swarm-ui and swarm-server"
license = "MIT"

[dependencies]
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
swarm-protocol = { path = "../swarm-protocol" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
