[package]
name = "swarm-ui"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lib]
name = "swarm_ui"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
portable-pty = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
uuid = { version = "1", features = ["serde", "v4"] }
window-vibrancy = "0.6"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
