[package]
name = "swarm-ui"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lib]
name = "swarm_ui"
path = "src/lib.rs"
# Tauri 2 + plugin (tauri-plugin-dialog) requires the lib to be available as
# rlib (for the binary to link), cdylib (for plugin runtime loading), and
# staticlib (for mobile builds). Without this, `cargo run` fails with:
#   "crate `tauri` required to be available in rlib format, but was not found"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bytes = "1"
base64 = "0.22"
dirs = "6"
futures-util = "0.3"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["service", "tokio"] }
rmp-serde = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
swarm-protocol = { path = "../../../crates/swarm-protocol" }
swarm-state = { path = "../../../crates/swarm-state" }
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-dialog = "2.7.0"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.24"
uuid = { version = "1", features = ["serde", "v4"] }
window-vibrancy = "0.6"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
